# disgrace

./: .gitignore  CLAUDE.md  DEPLOY.md  README.md  mix.exs  package-lock.json  package.json  pyproject.toml  tailwind.config.js
.claude/: settings.json
.github/workflows/: python.yml
alembic/: env.py
alembic/versions/: 5b7c1c363f5c_add_image_url_to_messages.py  7e2a5978acdb_create_users_rooms_messages.py  a1b2c3d4e5f6_add_auth_to_users.py  b2c3d4e5f6a7_add_avatar_url_to_users.py  c3d4e5f6a7b8_add_replies_edits_reactions.py  d4e5f6a7b8c9_add_euchre_tables.py
app/: auth.py  config.py  db.py  euchre.py  main.py  models.py  schemas.py  uploads.py  ws.py
app/routers/: games.py  messages.py  rooms.py  sessions.py
app/tests/: conftest.py  test_api.py  test_euchre_engine.py  test_games_api.py  test_games_ws.py  test_messages.py  ws_helpers.py
assets/css/: app.css
assets/js/: app.js
config/: config.exs  dev.exs  prod.exs  runtime.exs
frontend/: app.css  index.html
lib/chat_app/: chat.ex  release.ex
lib/chat_app/chat/: message.ex  room.ex  user.ex
lib/chat_app_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex
lib/chat_app_web/channels/: user_socket.ex
lib/chat_app_web/controllers/: message_controller.ex  message_json.ex  room_controller.ex  room_json.ex  session_controller.ex  user_json.ex
priv/repo/migrations/: 20260719202313_create_users.exs  20260719202317_create_rooms.exs
reference-application/: DEPLOY.md  README.md  mix.exs
reference-application/config/: config.exs  dev.exs  test.exs
reference-application/dev-client/: index.html
(+13 files in other folders)
